Fix weird display on mobile devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,7 +22,8 @@
   flex-direction: column;
   padding-left: 1rem;
   padding-right: 1rem;
-  width: var(--main-width);
+  min-width: 0;
+  max-width: var(--main-width);
   margin-left: auto;
   margin-right: auto;
 }
